# unsafety-propagation-graph

./: .gitmodules  Cargo.toml  README.md  audit.md  run.sh  rust-toolchain.toml
.github/workflows/: deploy.yaml
assets/: std.json
assets/fn_name_mapping/: alloc.json  std.json
assets/specs/: sp-core.toml
src/: adt.rs  analyze_fn_def.rs  info_adt.rs  info_fn.rs  info_mod.rs  main.rs  output.rs  utils.rs
src/info_mod/: tree.rs
src/output/: adt.rs  caller.rs  fn_.rs  utils.rs
tests/: entry.rs
tests/demo/: safety-tags.toml  tags.json
tests/demo/src/: lib.rs  num.rs
tests/pass/: constructors.stdout  free-functions.stdout  plain-places.rs  plain-places.stdout  poc.rs  poc.stdout  projection.rs  projection.stdout  simple.stdout  struct-methods.rs  struct-methods.stdout  struct_methods.stdout  variant-idx.rs  variant-idx.stdout
ui/: README.md  nuxt.config.ts  package-lock.json  package.json
ui/app/: app.vue
ui/app/assets/css/: main.css
ui/app/components/: Flow.vue  UPG.vue
ui/app/components/code/: Adt.vue  AdtPopup.vue  Help.vue  Markdown.vue  Src.vue
ui/app/components/node/: NoHandle.vue  Tag.vue
ui/app/components/widget/: NaviTree.vue  Paginator.vue  SearchFn.vue  SelectPanel.vue  Tag.vue  TagPlot.vue  Top.vue  TopBar.vue
ui/app/lib/: elk.ts  graph.ts  output.ts  panel.ts  topbar.ts
ui/app/utils/: getLink.ts  graph.ts  updateNodePosition.ts
upg/: package-lock.json  package.json
upg/app/: app.vue
upg/app/components/: Demo.vue  Flow.vue  SpecialEdge.vue  UPG.vue
upg/app/plugins/: shiki.ts
upg/app/utils/: globalTheme.ts  useLayout.ts
(+5 files in other folders)
